# sts-a10-agent

./: .gitignore  APPLET_ART_DIRECTION_PASS_2026_06_01.md  APPLET_INTERACTION_QA_REPORT_2026_05_31.md  ARCADE_EXPANSION_REPORT_2026_06_01.md  GAME_PLATFORM_ROADMAP_2026_06_01.md  GAME_PLATFORM_UX_FOUNDATION_REPORT_2026_06_01.md  GITHUB_PAGES_APPLET_AUDIT_REPAIR_2026_06_01.md  README.md  REAL_APPLET_REPAIR_REPORT_2026_06_01.md  SINGLE_PLAYER_OPPONENTS_PASS_1_REPORT_2026_06_01.md  index.html  package-lock.json  package.json  pyproject.toml  tsconfig.node.json  vite.config.ts
.github/workflows/: deploy-pages.yml
docs/: CHESS_COACHING_ROADMAP_2026_06_03.md  applets-ui-overhaul-2026-05-31.md
docs/research/: STS2_TOOLING_RESEARCH_2026_05_29.md
fixtures/logs/: sample_recommendations.jsonl
fixtures/raw/sts2mcp/: card_reward_regent.json  combat_regent.json  event_regent.json  map_regent.json  rest_site_regent.json  shop_regent.json
scripts/: capture-applet-screenshots.mjs  check-static-build.mjs
src/: App.tsx  styles.css  xoGame.test.ts  xoGame.ts
src/applets/: AppletHub.tsx  AppletThumbnail.tsx  GameUi.tsx  appletInteraction.test.tsx  appletsRegistry.ts  boardGameOpponents.test.ts  boardGameOpponents.ts  gameScoring.ts
src/applets/arcade-games/: ArcadeGamePages.tsx
src/applets/classic-games/: ClassicGamePages.tsx  superHexagonMath.ts  (+1 more)
src/sts2_agent/: __init__.py  advice.py  cli.py  io.py  logging.py  metadata.py  models.py  normalize.py  sts2mcp.py
tests/: test_advice.py  test_cli.py  test_import.py  test_logging.py  test_normalize.py  test_sts2mcp_client.py
(+18 files in other folders)
